# rustBackend

./: Cargo.toml  Rocket.toml
src/: main.rs
src/api/: mod.rs  userapi.rs
src/models/: mod.rs  usermodel.rs
src/service/: userservice.rs
